# robot-collab

./: .gitignore  .gitmodules  README.md  run_dialog.py
prompting/: dialog_prompter.py  local_llm.py  plan_prompter.py
roco_pettingllms/: README.md  pyproject.toml
roco_pettingllms/roco_pettingllms/: __init__.py  _entry.py  agent.py  env.py  worker.py
roco_pettingllms/roco_pettingllms/config/: roco_L1_2agent.yaml  roco_L1_3agent.yaml
roco_pettingllms/scripts/train/roco/: roco_L1_2agent.sh  roco_L1_3agent.sh
rocobench/: rrt_multi_arm.py
rocobench/envs/: base_env.py  env_utils.py
