[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "roco_pettingllms"
version = "0.1.0"
description = "RoCo MuJoCo benchmark as a PettingLLMs multi-agent RL environment."
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["ray"]

[tool.setuptools.packages.find]
include = ["roco_pettingllms*"]
